infra/k8s-dev/ticketing-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketing-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: ticketing-ingress-service
spec:
  rules:
  - host: ticketing.dev
    http:
      paths:
      - pathType: Prefix
        path: /api/users/?(.*)
        backend:
          service:
            name: auth-service
            port: 
              number: 3000
      - pathType: Prefix
        path: /api/tickets/?(.*)
        backend:
          service:
            name: tickets-service
            port: 
              number: 3000
      - pathType: Prefix
        path: /api/orders/?(.*)
        backend:
          service:
            name: orders-service
            port: 
              number: 3000
      - pathType: Prefix
        path: /api/payments/?(.*)
        backend:
          service:
            name: payments-service
            port: 
              number: 3000
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: ticketclient-service
            port: 
              number: 3000
